# graphrag-poc

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: config.py  main.py
app/agents/: account_manager_agent.py  artifacts.py  base.py  support_agent.py
app/agents/prompts/: am_system.py  support_system.py
app/api/: deps.py  exceptions.py
app/core/: account_store.py  agent_runner.py  embeddings.py  genai.py  graph.py  llm.py  retrieval.py  vectorstore.py
app/models/: documents.py  graph_schema.py  schemas.py
app/pipelines/: consolidation.py  ingestion.py  loaders.py  memory_writer.py  query.py  text_splitter.py
app/prompts/: extraction.py  qa.py
config/nebula/: nebula-graphd.conf  nebula-metad.conf  nebula-storaged.conf
docs/: ARCHITECTURE.md  PRD-MEMORY-SYSTEMS.md  PRD-STREAMLIT.md  PRD.md  architecture.md
evals/: metrics.py  populate_chunks.py  runner.py
evals/truth_sets/: am_continuity.jsonl  support_qa.jsonl
scripts/: init_nebula.py  seed.py
test_data/: sample.txt
tests/: conftest.py  test_account_store.py  test_agent_endpoints.py  test_agents.py  test_api.py  test_api_client.py  test_consolidation.py  test_core.py  test_evals.py  test_genai.py  test_ingestion.py  test_loaders.py  test_memory_writer.py  test_query.py  test_retrieval.py  test_schemas.py  test_vectorstore.py
ui/: app.py
ui/components/: api_client.py  graph_renderer.py  sidebar.py
ui/pages/: 1_Upload.py  2_Graph.py  3_Query.py  4_Documents.py
(+10 files in other folders)
